//
//  HowOldUITests.swift
//  HowOldUITests
//
//  Created by Adolfho Athyla on 11/11/17.
//  Copyright © 2017 a7hyla. All rights reserved.
//

import XCTest

class HowOldUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testCalc() {
        
        let app = XCUIApplication()
        
        let datePickersQuery = app.datePickers
        datePickersQuery.pickerWheels["April"].swipeDown()
        datePickersQuery.pickerWheels["16"].swipeDown()
        datePickersQuery.pickerWheels["2018"].swipeDown()
        
        let resultLabel = app.staticTexts["result"].label
        let results = resultLabel.components(separatedBy: " ")
        let result = Int(results.first!)
        XCTAssertTrue(result! > 0)
        
    }
    
}
